--- a/0616/0616/0616.csproj
+++ b/0616/0616/0616.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CxFlatUI, Version=1.0.0.4, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\CxFlatUI.1.0.0.4\lib\net45\CxFlatUI.dll</HintPath>
+    </Reference>
     <Reference Include="SunnyUI, Version=3.0.4.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\SunnyUI.3.0.4\lib\net40\SunnyUI.dll</HintPath>
     </Reference>
@@ -62,6 +65,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -84,6 +90,16 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="ReadMePng\APIKeys.png" />
+    <Content Include="ReadMePng\Deploy.png" />
+    <Content Include="ReadMePng\MetaData.png" />
+    <Content Include="ReadMePng\Nuget.png" />
+    <Content Include="ReadMePng\NugetAPIKeys.png" />
+    <Content Include="ReadMePng\NuPackNugetPackager.png" />
+    <Content Include="ReadMePng\Options.png" />
+    <Content Include="ReadMePng\类库上右键.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
