--- a/1313/1313/1313.csproj
+++ b/1313/1313/1313.csproj
@@ -39,6 +39,15 @@
     <Reference Include="MaterialSkin, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\MaterialSkin.0.2.1\lib\MaterialSkin.dll</HintPath>
     </Reference>
+    <Reference Include="MetroFramework, Version=1.4.0.0, Culture=neutral, PublicKeyToken=5f91a84759bf584a, processorArchitecture=MSIL">
+      <HintPath>..\packages\MetroModernUI.1.4.0.0\lib\net\MetroFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="MetroFramework.Design, Version=1.4.0.0, Culture=neutral, PublicKeyToken=5f91a84759bf584a, processorArchitecture=MSIL">
+      <HintPath>..\packages\MetroModernUI.1.4.0.0\lib\net\MetroFramework.Design.dll</HintPath>
+    </Reference>
+    <Reference Include="MetroFramework.Fonts, Version=1.4.0.0, Culture=neutral, PublicKeyToken=5f91a84759bf584a, processorArchitecture=MSIL">
+      <HintPath>..\packages\MetroModernUI.1.4.0.0\lib\net\MetroFramework.Fonts.dll</HintPath>
+    </Reference>
     <Reference Include="SunnyUI, Version=3.0.4.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\SunnyUI.3.0.4\lib\net40\SunnyUI.dll</HintPath>
     </Reference>
@@ -60,33 +69,82 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="RepairTable\Boltless250Price2.cs" />
-    <Compile Include="RepairTable\Boltless250Price.cs" />
-    <Compile Include="RepairTable\BoltlessPrice.cs" />
-    <Compile Include="RepairTable\BoltlessPrice2.cs" />
-    <Compile Include="RepairTable\JinxPrice.cs" />
-    <Compile Include="RepairTable\JinxPrice2.cs" />
-    <Compile Include="RepairTable\MetalPrice.cs" />
-    <Compile Include="RepairTable\MetalPrice2.cs" />
-    <Compile Include="RepairTable\RoofPrice.cs" />
-    <Compile Include="RepairTable\RoofPrice2.cs" />
-    <Compile Include="RepairTable\SideingPrice.cs" />
-    <Compile Include="RepairTable\SideingPrice2.cs" />
-    <Compile Include="RepairTable\WallPrice.cs" />
-    <Compile Include="RepairTable\WallPrice2.cs" />
-    <Compile Include="ui\Form1.cs">
+    <Compile Include="conmon\Util.cs" />
+    <Compile Include="PanelTable\GlasswoolPrice.cs" />
+    <Compile Include="PanelTable\StyrofoamPrice.cs" />
+    <Compile Include="ui\Boltless250Form.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ui\Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="ui\Boltless250Form.Designer.cs">
+      <DependentUpon>Boltless250Form.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ui\BoltlessForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ui\BoltlessForm.Designer.cs">
+      <DependentUpon>BoltlessForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ui\JinxForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ui\JinxForm.Designer.cs">
+      <DependentUpon>JinxForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ui\MetalForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ui\MetalForm.Designer.cs">
+      <DependentUpon>MetalForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ui\RoofForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ui\RoofForm.Designer.cs">
+      <DependentUpon>RoofForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ui\SideingForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ui\SideingForm.Designer.cs">
+      <DependentUpon>SideingForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ui\TreeForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ui\TreeForm.Designer.cs">
+      <DependentUpon>TreeForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ui\WallForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ui\WallForm.Designer.cs">
+      <DependentUpon>WallForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ui\MainForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ui\MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="model\EPS.cs" />
     <Compile Include="model\GlassWool.cs" />
     <Compile Include="model\PUR.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="main\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="ui\Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="ui\styrofoamForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ui\styrofoamForm.Designer.cs">
+      <DependentUpon>styrofoamForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ui\WoolForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ui\WoolForm.Designer.cs">
+      <DependentUpon>WoolForm.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="ui\MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -97,6 +155,21 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ui\RoofForm.resx">
+      <DependentUpon>RoofForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ui\SideingForm.resx">
+      <DependentUpon>SideingForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ui\styrofoamForm.resx">
+      <DependentUpon>styrofoamForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ui\WallForm.resx">
+      <DependentUpon>WallForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ui\WoolForm.resx">
+      <DependentUpon>WoolForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -121,6 +194,8 @@
     <Content Include="ReadMePng\Options.png" />
     <Content Include="ReadMePng\类库上右键.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="panel2Table\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
