--- a/1313/1313/packages.config
+++ b/1313/1313/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="CxFlatUI" version="1.0.0.4" targetFramework="net472" />
   <package id="MaterialSkin" version="0.2.1" targetFramework="net472" />
+  <package id="MetroModernUI" version="1.4.0.0" targetFramework="net472" />
   <package id="SunnyUI" version="3.0.4" targetFramework="net472" />
   <package id="SunnyUI.Common" version="3.0.4" targetFramework="net472" />
 </packages>
