--- a/1313/1313/1313.csproj
+++ b/1313/1313/1313.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{FF571CA7-EBEC-4AC9-81C9-71EA78E597A0}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <RootNamespace>_1313</RootNamespace>
     <AssemblyName>1313</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
@@ -31,6 +31,9 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="CxFlatUI, Version=1.0.0.4, Culture=neutral, processorArchitecture=MSIL">
@@ -70,6 +73,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="conmon\Util.cs" />
+    <Compile Include="model\PriceItem.cs" />
+    <Compile Include="PanelTable\ColorPrice.cs" />
     <Compile Include="PanelTable\GlasswoolPrice.cs" />
     <Compile Include="PanelTable\StyrofoamPrice.cs" />
     <Compile Include="ui\Boltless250Form.cs">
@@ -143,6 +148,15 @@
     <Compile Include="ui\WoolForm.Designer.cs">
       <DependentUpon>WoolForm.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ui\Boltless250Form.resx">
+      <DependentUpon>Boltless250Form.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ui\BoltlessForm.resx">
+      <DependentUpon>BoltlessForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ui\JinxForm.resx">
+      <DependentUpon>JinxForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ui\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -155,6 +169,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ui\MetalForm.resx">
+      <DependentUpon>MetalForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ui\RoofForm.resx">
       <DependentUpon>RoofForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -163,6 +180,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ui\styrofoamForm.resx">
       <DependentUpon>styrofoamForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ui\TreeForm.resx">
+      <DependentUpon>TreeForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ui\WallForm.resx">
       <DependentUpon>WallForm.cs</DependentUpon>
@@ -187,6 +207,7 @@
   <ItemGroup>
     <Content Include="ReadMePng\APIKeys.png" />
     <Content Include="ReadMePng\Deploy.png" />
+    <Content Include="ReadMePng\KakaoTalk_20210624_091013333.jpg" />
     <Content Include="ReadMePng\MetaData.png" />
     <Content Include="ReadMePng\Nuget.png" />
     <Content Include="ReadMePng\NugetAPIKeys.png" />
