--- a/1313/1313/1313.csproj
+++ b/1313/1313/1313.csproj
@@ -73,91 +73,141 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="conmon\Util.cs" />
+    <Compile Include="model\Glasswool.cs" />
     <Compile Include="model\PriceItem.cs" />
+    <Compile Include="model\Styrofoam.cs" />
+    <Compile Include="M_Ui\EstimateView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="M_Ui\EstimateView.Designer.cs">
+      <DependentUpon>EstimateView.cs</DependentUpon>
+    </Compile>
     <Compile Include="PanelTable\ColorPrice.cs" />
     <Compile Include="PanelTable\GlasswoolPrice.cs" />
     <Compile Include="PanelTable\StyrofoamPrice.cs" />
-    <Compile Include="ui\S_Boltless250Form.cs">
+    <Compile Include="S_Ui\S_Boltless250Form.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ui\S_Boltless250Form.Designer.cs">
+    <Compile Include="S_Ui\S_Boltless250Form.Designer.cs">
       <DependentUpon>S_Boltless250Form.cs</DependentUpon>
     </Compile>
-    <Compile Include="ui\S_BoltlessForm.cs">
+    <Compile Include="S_Ui\S_BoltlessForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ui\S_BoltlessForm.Designer.cs">
+    <Compile Include="S_Ui\S_BoltlessForm.Designer.cs">
       <DependentUpon>S_BoltlessForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="ui\S_JinxForm.cs">
+    <Compile Include="S_Ui\S_JinxForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ui\S_JinxForm.Designer.cs">
+    <Compile Include="S_Ui\S_JinxForm.Designer.cs">
       <DependentUpon>S_JinxForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="ui\S_MetalForm.cs">
+    <Compile Include="S_Ui\S_MetalForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ui\S_MetalForm.Designer.cs">
+    <Compile Include="S_Ui\S_MetalForm.Designer.cs">
       <DependentUpon>S_MetalForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="ui\S_RoofForm.cs">
+    <Compile Include="S_Ui\S_RoofForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ui\S_RoofForm.Designer.cs">
+    <Compile Include="S_Ui\S_RoofForm.Designer.cs">
       <DependentUpon>S_RoofForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="ui\S_SideingForm.cs">
+    <Compile Include="S_Ui\S_SideingForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ui\S_SideingForm.Designer.cs">
+    <Compile Include="S_Ui\S_SideingForm.Designer.cs">
       <DependentUpon>S_SideingForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="ui\S_TreeForm.cs">
+    <Compile Include="S_Ui\S_TreeForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ui\S_TreeForm.Designer.cs">
+    <Compile Include="S_Ui\S_TreeForm.Designer.cs">
       <DependentUpon>S_TreeForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="ui\S_WallForm.cs">
+    <Compile Include="S_Ui\S_WallForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ui\S_WallForm.Designer.cs">
+    <Compile Include="S_Ui\S_WallForm.Designer.cs">
       <DependentUpon>S_WallForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="ui\MainForm.cs">
+    <Compile Include="M_Ui\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ui\MainForm.Designer.cs">
+    <Compile Include="M_Ui\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="model\EPS.cs" />
-    <Compile Include="model\GlassWool.cs" />
-    <Compile Include="model\PUR.cs" />
     <Compile Include="main\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ui\styrofoamForm.cs">
+    <Compile Include="S_Ui\styrofoamForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ui\styrofoamForm.Designer.cs">
+    <Compile Include="S_Ui\styrofoamForm.Designer.cs">
       <DependentUpon>styrofoamForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="ui\WoolForm.cs">
+    <Compile Include="W_Ui\WoolForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ui\WoolForm.Designer.cs">
+    <Compile Include="W_Ui\WoolForm.Designer.cs">
       <DependentUpon>WoolForm.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="ui\S_Boltless250Form.resx">
+    <Compile Include="W_Ui\W_Boltless250Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="W_Ui\W_Boltless250Form.Designer.cs">
+      <DependentUpon>W_Boltless250Form.cs</DependentUpon>
+    </Compile>
+    <Compile Include="W_Ui\W_JinxForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="W_Ui\W_JinxForm.Designer.cs">
+      <DependentUpon>W_JinxForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="W_Ui\W_MetalForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="W_Ui\W_MetalForm.Designer.cs">
+      <DependentUpon>W_MetalForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="W_Ui\W_RoofForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="W_Ui\W_RoofForm.Designer.cs">
+      <DependentUpon>W_RoofForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="W_Ui\W_SideingForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="W_Ui\W_SideingForm.Designer.cs">
+      <DependentUpon>W_SideingForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="W_Ui\W_V80Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="W_Ui\W_V80Form.Designer.cs">
+      <DependentUpon>W_V80Form.cs</DependentUpon>
+    </Compile>
+    <Compile Include="W_Ui\W_WallForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="W_Ui\W_WallForm.Designer.cs">
+      <DependentUpon>W_WallForm.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="M_Ui\EstimateView.resx">
+      <DependentUpon>EstimateView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="S_Ui\S_Boltless250Form.resx">
       <DependentUpon>S_Boltless250Form.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ui\S_BoltlessForm.resx">
+    <EmbeddedResource Include="S_Ui\S_BoltlessForm.resx">
       <DependentUpon>S_BoltlessForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ui\S_JinxForm.resx">
+    <EmbeddedResource Include="S_Ui\S_JinxForm.resx">
       <DependentUpon>S_JinxForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ui\MainForm.resx">
+    <EmbeddedResource Include="M_Ui\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -169,26 +219,47 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="ui\S_MetalForm.resx">
+    <EmbeddedResource Include="S_Ui\S_MetalForm.resx">
       <DependentUpon>S_MetalForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ui\S_RoofForm.resx">
+    <EmbeddedResource Include="S_Ui\S_RoofForm.resx">
       <DependentUpon>S_RoofForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ui\S_SideingForm.resx">
+    <EmbeddedResource Include="S_Ui\S_SideingForm.resx">
       <DependentUpon>S_SideingForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ui\styrofoamForm.resx">
+    <EmbeddedResource Include="S_Ui\styrofoamForm.resx">
       <DependentUpon>styrofoamForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ui\S_TreeForm.resx">
+    <EmbeddedResource Include="S_Ui\S_TreeForm.resx">
       <DependentUpon>S_TreeForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ui\S_WallForm.resx">
+    <EmbeddedResource Include="S_Ui\S_WallForm.resx">
       <DependentUpon>S_WallForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ui\WoolForm.resx">
+    <EmbeddedResource Include="W_Ui\WoolForm.resx">
       <DependentUpon>WoolForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="W_Ui\W_Boltless250Form.resx">
+      <DependentUpon>W_Boltless250Form.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="W_Ui\W_JinxForm.resx">
+      <DependentUpon>W_JinxForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="W_Ui\W_MetalForm.resx">
+      <DependentUpon>W_MetalForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="W_Ui\W_RoofForm.resx">
+      <DependentUpon>W_RoofForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="W_Ui\W_SideingForm.resx">
+      <DependentUpon>W_SideingForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="W_Ui\W_V80Form.resx">
+      <DependentUpon>W_V80Form.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="W_Ui\W_WallForm.resx">
+      <DependentUpon>W_WallForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -215,8 +286,6 @@
     <Content Include="ReadMePng\Options.png" />
     <Content Include="ReadMePng\类库上右键.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="panel2Table\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
