--- a/1313/1313/packages.config
+++ b/1313/1313/packages.config
@@ -5,6 +5,7 @@
   <package id="MaterialSkin" version="0.2.1" targetFramework="net472" />
   <package id="MetroModernUI" version="1.4.0.0" targetFramework="net472" />
   <package id="Microsoft.IO.RecyclableMemoryStream" version="1.4.1" targetFramework="net472" />
+  <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1000" targetFramework="net472" />
   <package id="SunnyUI" version="3.0.4" targetFramework="net472" />
   <package id="SunnyUI.Common" version="3.0.4" targetFramework="net472" />
   <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net472" />
