--- a/carFixMgr0611/carFixMgr0611/carFixMgr0611.csproj
+++ b/carFixMgr0611/carFixMgr0611/carFixMgr0611.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{3F89336F-2C10-4230-A849-CFDC67635FC6}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <RootNamespace>carFixMgr0611</RootNamespace>
     <AssemblyName>carFixMgr0611</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
